@@ -163,11 +163,8 @@ module ActiveScaffold
 
       def column_link_authorized?(link, column, record, associated)
         if column.association
-          associated_for_authorized = if associated.nil? || (column.plural_association? && !associated.loaded?) || (associated.respond_to?(:blank?) && associated.blank?)
+          associated_for_authorized = if column.plural_association? || (associated.respond_to?(:blank?) && associated.blank?)
             column.association.klass
-          elsif [:has_many, :has_and_belongs_to_many].include? column.association.macro
-            # may be cached with [] or [nil] to avoid some queries
-            associated.first || column.association.klass
           else
             associated
           end
